2015-11-07  Kelvin White  <kwhite@gnu.org>

	* erc-pcomplete.el (pcomplete-erc-nicks): Fix bug for tab complete
	(bug#18771)

2015-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el (erc-switch-to-buffer): Fix last change (bug#20187).

2015-03-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el (erc-switch-to-buffer): Rename from erc-iswitchb and rewrite
	using read-buffer (bug#20116).
	(erc--buffer-p): New function, extracted from erc-buffer-filter.
	(erc-buffer-filter): Use it.
	(erc-with-all-buffers-of-server): Silence compile warning if the return
	value is unused.
	(erc-is-valid-nick-p, erc-common-server-suffixes, erc-get-arglist)
	(erc-command-name, erc-popup-input-buffer): Use \` and \' to match
	beg/end of string.

2015-03-03  Kelvin White  <kwhite@gnu.org>

	* erc.el: Add old version string back to file header for
	package.el compatibility

2015-03-03  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-rename-buffers): Doc fix.  Add :version.

2015-03-03  Dima Kogan  <dima@secretsauce.net>

	* erc-backend.el (define-erc-response-handler): Give hook-name
	default value of nil and add-to-list (bug#19363).
2015-02-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc-spelling.el (erc-spelling-init):
	Use flyspell-generic-check-word-predicate.

2015-01-28  Dima Kogan  <dima@secretsauce.net>

	* erc-backend.el (define-erc-response-handler): Give hook-name
	default value of nil and add-to-list (bug#19363).

2015-01-22  Paul Eggert  <eggert@cs.ucla.edu>

	Don't downcase system diagnostics' first letters
	* erc-dcc.el (erc-dcc-server): Ignore case while comparing diagnostics.

2014-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* erc-desktop-notifications.el (erc-notifications-bus):
	New customer option.  Supports cases when Emacs hasn't been
	invoked in the same environment where the notifications shall go to.
	(erc-notifications-notify): Use it.

2014-11-10  Kelvin White  <kwhite@gnu.org>
