@@ -1,3 +1,11 @@
+2018-03-09  Sachin Patil <psachin@redhat.com>
+
+	* erc-desktop-notifications.el (erc-notifications-notify):
+	Show channel name in ERC notification. A new varialble
+	`erc-notification-show-channel`(nil) when set to non-nil
+	displays channel name along with IRC nick who sent the
+	message.
+
 2015-11-07  Kelvin White  <kwhite@gnu.org>
 
 	* erc-pcomplete.el (pcomplete-erc-nicks): Fix bug for tab complete
